updates to students, bjgeo, outreach

--- a/pages/aboutme/index.html
+++ b/pages/aboutme/index.html
@@ -278,10 +278,13 @@ My ORCiD is <a rel="noopener noreferrer" target="_blank" href="http://orcid.org/
     <p>Head of Department - <a rel="noopener noreferrer" target="_blank" href="http://iee.usp.br/?q=pt-br/divisao-cientifica/tecnologia-petroleo">Division of Oil, Natural Gas and Bioenergy</a> - IEE-USP (2016-??)</p>
   </li>
   <li>
-    <p>Deputy Editor of the <a rel="noopener noreferrer" target="_blank" href="http://www.scielo.br/bjgeo">Brazilian Journal of Geology</a> (2017-??)</p>
+    <p>Editor-in-Chief of the <a rel="noopener noreferrer" target="_blank" href="http://www.scielo.br/bjgeo">Brazilian Journal of Geology</a> (2021-??)</p>
   </li>
   <li>
     <p>Associate Editor of <a rel="noopener noreferrer" target="_blank" href="https://www.journals.elsevier.com/computers-and-geosciences/editorial-board">Computers &amp; Geosciences</a> (2019-??)</p>
+  </li>
+  <li>
+    <p>Deputy Editor of the <a rel="noopener noreferrer" target="_blank" href="http://www.scielo.br/bjgeo">Brazilian Journal of Geology</a> (2017-2021)</p>
   </li>
   <li>
     <p>Head of the Research Committee - IEE-USP (2015-2019)</p>
