--- a/pages/bjgeo/index.html
+++ b/pages/bjgeo/index.html
@@ -273,43 +273,48 @@
   <tbody>
     <tr>
       <td><strong><a rel="noopener noreferrer" target="_blank" href="https://www.elsevier.com/authors/journal-authors/measuring-a-journals-impact">Metrics</a></strong></td>
-      <td><strong>2019</strong></td>
-      <td><strong>2018</strong></td>
-      <td><strong>2017</strong></td>
-      <td><strong>2016</strong></td>
       <td><strong>2015</strong></td>
+      <td><strong>2016</strong></td>
+      <td><strong>2017</strong></td>
+      <td><strong>2018</strong></td>
+      <td><strong>2019</strong></td>
+      <td><strong>2020</strong></td>
     </tr>
     <tr>
-      <td>Impact Factor (JCR)</td>
-      <td>1.046</td>
-      <td>1.590</td>
-      <td>1.250</td>
-      <td>0.798</td>
+      <td><a rel="noopener noreferrer" target="_blank" href="https://jcr.clarivate.com/jcr-jp/journal-profile?journal=BRAZ%20J%20GEOL&amp;year=2020">Impact Factor (JCR)</a></td>
       <td>0.598</td>
+      <td>0.798</td>
+      <td>1.250</td>
+      <td>1.590</td>
+      <td>1.046</td>
+      <td>1.259</td>
     </tr>
     <tr>
       <td>Impact Factor (5-year)</td>
-      <td>1.570</td>
-      <td>1.440</td>
-      <td>1.165</td>
-      <td>0.797</td>
       <td>0.598</td>
+      <td>0.797</td>
+      <td>1.165</td>
+      <td>1.440</td>
+      <td>1.570</td>
+      <td>1.967</td>
     </tr>
     <tr>
       <td><a rel="noopener noreferrer" target="_blank" href="https://www.scimagojr.com/journalsearch.php?q=21100266566&amp;tip=sid&amp;clean=0">Scimago (SJR)</a></td>
-      <td>0.647 (Q1)</td>
-      <td>0.584 (Q2)</td>
-      <td>0.608</td>
-      <td>0.427</td>
       <td>0.361</td>
+      <td>0.427</td>
+      <td>0.608</td>
+      <td>0.584</td>
+      <td>0.647</td>
+      <td>0.469</td>
     </tr>
     <tr>
       <td><a rel="noopener noreferrer" target="_blank" href="https://www.scopus.com/sourceid/21100266566">CiteScore</a></td>
+      <td>0.7</td>
+      <td>1.2</td>
+      <td>1.8</td>
+      <td>2.0</td>
       <td>2.6</td>
       <td>2.0</td>
-      <td>1.8</td>
-      <td>1.2</td>
-      <td>0.7</td>
     </tr>
   </tbody>
 </table>
@@ -323,19 +328,24 @@
 <h4 id="faq-about-bjgeo">FAQ about BJGEO:</h4>
 
 <p><strong>Are there any charges for publishing (APCs)?</strong><br />
-Yes. Starting January 1st 2021, <a rel="noopener noreferrer" target="_blank" href="http://www.sbgeo.org.br/">Brazilian Geological Society (SBG)</a> will charge an Article Processing Charge (APC) for all articles that are accepted for publication.</p>
+No. We don’t charge anything for publishing your paper. There are no Article Processing Charges (APCs) or costs for color figures. The journal in online-only so we don’t have costs for printing.</p>
 
-<p>This was not an easy decision, but with the severe cuts in Science funding from federal agencies and the end of a sponsorship from Petrobras, there was no other way to mantain the publication without the APCs. Still, the values are considerably lower than most APCs, whith cost starting at R$ 5,000.00 (USD 1,000.00).</p>
+<p>All the costs of the BJGEO are covered by the <a rel="noopener noreferrer" target="_blank" href="http://www.sbgeo.org.br/">Brazilian Geological Society</a> (through a sponsorship from Vale) and by Scientific Publishing Grants from CNPq and CAPES (Federal agencies for Science and Higher Level Education). We are continuously looking for funding opportunities to keep the BJGEO free and open for everyone.</p>
 
-<p>Note that the APC doesn’t cover all the publication costs, which means that the SBG still needs to look for funding and that your membership is key to keep both the society and the journal alive.</p>
+<!-- Yes. Starting January 1st 2021, [Brazilian Geological Society (SBG)](http://www.sbgeo.org.br/) will charge an Article Processing Charge (APC) for all articles that are accepted for publication.  
 
-<p>The values are progressive, depending on the status of the first author as a member of SBG:</p>
+This was not an easy decision, but with the severe cuts in Science funding from federal agencies and the end of a sponsorship from Petrobras, there was no other way to mantain the publication without the APCs. Still, the values are considerably lower than most APCs, whith cost starting at R$ 5,000.00 (USD 1,000.00). 
 
-<p>First author is a member of SBG (professional or student) with annual fees paid for the last 3 (three) years in a row: <strong>R$ 750.00</strong></p>
+Note that the APC doesn't cover all the publication costs, which means that the SBG still needs to look for funding and that your membership is key to keep both the society and the journal alive.  
 
-<p>First author is a member of SBG (professional or student) with annual fees paid for the last 2 (two) years in a row: <strong>R$ 1000.00</strong></p>
+The values are progressive, depending on the status of the first author as a member of SBG:  
 
-<p>Authors are not members of SBG: <strong>R$ 1,500.00</strong></p>
+First author is a member of SBG (professional or student) with annual fees paid for the last 3 (three) years in a row: **R$ 750.00**  
+
+First author is a member of SBG (professional or student) with annual fees paid for the last 2 (two) years in a row: **R$ 1000.00**  
+
+Authors are not members of SBG: **R$ 1,500.00**  
+ -->
 
 <!-- No. We don't charge anything for publishing your paper. There are no Article Processing Charges (APCs) or costs for color figures. The journal in online-only so we don't have costs for printing.
 
@@ -354,6 +364,8 @@ Here you will find a simple guide about the whole process of publishing your art
 <ul>
   <li><em>Da submissão à comemoração, ou como funciona o processo de avaliação de um artigo científico, e qual sua parte nisso</em> - <a rel="noopener noreferrer" target="_blank" href="https://doi.org/10.6084/m9.figshare.7701479.v1">https://doi.org/10.6084/m9.figshare.7701479.v1</a></li>
 </ul>
+
+<p>And here is a video about it: <a rel="noopener noreferrer" target="_blank" href="https://youtu.be/Q8c5bVG7fn4">Como funciona a revisão de um artigo científico?</a></p>
 
 <p><br />
 <strong>How long does it take from submission to first response?</strong> <br />
