--- a/pages/outreach/index.html
+++ b/pages/outreach/index.html
@@ -277,9 +277,12 @@ Check out the <a rel="noopener noreferrer" target="_blank" href="https://spamlab
   <li><a rel="noopener noreferrer" target="_blank" href="https://youtu.be//9sm-BeWanUo">05 - Submissão de artigo no SciELO / ScholarOne</a></li>
   <li><a rel="noopener noreferrer" target="_blank" href="https://youtu.be/ZpEX6JTQU1o">06 - Análise de plágio de artigos científicos</a></li>
   <li><a rel="noopener noreferrer" target="_blank" href="https://youtu.be/vnAeelLZ--0">07 - O quê é ORCiD? Precisa mesmo ter um? (SIM!)</a></li>
-  <li><a rel="noopener noreferrer" target="_blank" href="https://youtu.be/DS0HydVh8Bg">08 - Periódicos Predatórios</a><br />
- </li>
+  <li><a rel="noopener noreferrer" target="_blank" href="https://youtu.be/VKj0NwHxY7E">08 - Preprints e Postprints - Acesso Aberto Verde</a></li>
+  <li><a rel="noopener noreferrer" target="_blank" href="https://youtu.be/DS0HydVh8Bg">09 - Reriódicos Predatórios</a></li>
+  <li><a rel="noopener noreferrer" target="_blank" href="https://youtu.be/_IUh0cQRun8">10 - O erro que todos cometemos nas figuras e gráficos</a></li>
 </ul>
+
+<p> </p>
 
 <h3 id="demix-project">DEMIX project</h3>
 <ul>
@@ -290,6 +293,9 @@ Check out the <a rel="noopener noreferrer" target="_blank" href="https://spamlab
 
 <h3 id="gis-tips">GIS tips</h3>
 <ul>
+  <li><a rel="noopener noreferrer" target="_blank" href="https://youtu.be/WhK7kRyMMRc">Copermicus DEM - download por FTP</a></li>
+  <li><a rel="noopener noreferrer" target="_blank" href="https://youtu.be/_1giv7vpxhc">Copernicus DEM - como baixar e qual baixar (DTED ou DGED?)</a></li>
+  <li><a rel="noopener noreferrer" target="_blank" href="https://youtu.be/rltgCF7R6wg">ANÁLISE - Qual o melhor MDE gratuito e global?</a></li>
   <li><a rel="noopener noreferrer" target="_blank" href="https://youtu.be/Tt7cx2Oazj4">3 dicas de ouro para SIG!</a><br />
  </li>
 </ul>
@@ -298,9 +304,11 @@ Check out the <a rel="noopener noreferrer" target="_blank" href="https://spamlab
 <ul>
   <li>Live - <a rel="noopener noreferrer" target="_blank" href="https://youtu.be/_pohWjE4eiA">O fascinante mundo do GRASS-GIS (Geocast BR)</a></li>
   <li>Live - <a rel="noopener noreferrer" target="_blank" href="https://youtu.be/vp6frd89y9E">O Fascinante Mundo do GRASS (Prof. Gustavo Baptista - Ao Vivo no YouTube #6)</a></li>
-  <li>Podcast - <a rel="noopener noreferrer" target="_blank" href="https://anchor.fm/profgustavobaptista/episodes/Episdio-89---O-Fascinante-Mundo-do-GRASS-e17e6da">O Fascinante Mundo do Sensoriamento Remoto (Prof. Gustavo Baptista)</a><br />
- </li>
+  <li>Podcast - <a rel="noopener noreferrer" target="_blank" href="https://anchor.fm/profgustavobaptista/episodes/Episdio-89---O-Fascinante-Mundo-do-GRASS-e17e6da">O Fascinante Mundo do Sensoriamento Remoto (Prof. Gustavo Baptista)</a></li>
+  <li>Live - <a rel="noopener noreferrer" target="_blank" href="https://www.youtube.com/embed/U73C-In4dfs">GGEO Live - 3D Cave Mapping</a></li>
 </ul>
+
+<p> </p>
 
 <h3 id="aeolian-dunes-3d-modelling">Aeolian dunes 3D modelling</h3>
 <ul>
@@ -360,7 +368,10 @@ Check out the <a rel="noopener noreferrer" target="_blank" href="https://spamlab
   <li><a rel="noopener noreferrer" target="_blank" href="https://youtu.be/rgutNeD3nkE">GRASS 05 - Álgebra de mapas raster (r.mapcalc)</a></li>
   <li><a rel="noopener noreferrer" target="_blank" href="https://youtu.be/Sk02h1P_PPA">GRASS 06 - Dados vetoriais</a></li>
   <li><a rel="noopener noreferrer" target="_blank" href="https://youtu.be/ECRFyrSEmtI">GRASS 07 - Máscaras</a></li>
-  <li><a rel="noopener noreferrer" target="_blank" href="https://youtu.be/gUIagGIEEhA">GRASS 08 - Instalando Extensões (add-ons)</a><br />
+  <li><a rel="noopener noreferrer" target="_blank" href="https://youtu.be/gUIagGIEEhA">GRASS 08 - Instalando Extensões (add-ons)</a></li>
+  <li><a rel="noopener noreferrer" target="_blank" href="https://youtu.be/RWKlvYh5EJc">GRASS 09 - Sensoriamento Remoto 01 </a></li>
+  <li><a rel="noopener noreferrer" target="_blank" href="https://youtu.be/_B_fwlkR85w">GRASS 10 - Sensoriamento Remoto 02 </a></li>
+  <li><a rel="noopener noreferrer" target="_blank" href="https://youtu.be/21ksUZSgbY8">GRASS 11 - Análise Digital de Terreno </a><br />
  </li>
 </ul>
 
