--- a/pages/students/index.html
+++ b/pages/students/index.html
@@ -290,11 +290,6 @@ period: 2019
 High-resolution remote sensing of <em>igapó</em> forests in the Xingu River, eastern Amazonia - analysis of sedimentation patterns<br />
 period: 2018-? | program: PROCAM | scholarship: CAPES PROEX</p>
 
-<p><strong>Camila Duelis Viana</strong><br />
-<a rel="noopener noreferrer" target="_blank" href="http://orcid.org/0000-0001-7093-0244">ORCiD</a> | <a rel="noopener noreferrer" target="_blank" href="http://lattes.cnpq.br/8408152690266564">Lattes CV</a> | <a rel="noopener noreferrer" target="_blank" href="https://cdviana.github.io/">site/blog</a><br />
-Application of multi-scale photogrammetry in structural data collection<br />
-period: 2017-? | program: RMH</p>
-
 <p><strong>Guilherme Pereira Bento Garcia</strong><br />
 <a rel="noopener noreferrer" target="_blank" href="http://orcid.org/0000-0003-1209-7842">ORCiD</a> | <a rel="noopener noreferrer" target="_blank" href="http://lattes.cnpq.br/8143036335035110">Lattes CV</a><br />
 Detection and monitoring of landslides on natural slopes from integrated application of multispectral images and high-resolution elevation models<br />
@@ -346,6 +341,14 @@ period: 2019-? | program: RMH | scholarship: FAPESP grant <a rel="noopener noref
 &nbsp; -->
 
 <h3 id="former-students">Former Students</h3>
+<h3 id="phd">PhD</h3>
+<p><strong>Camila Duelis Viana</strong><br />
+<a rel="noopener noreferrer" target="_blank" href="http://orcid.org/0000-0001-7093-0244">ORCiD</a> | <a rel="noopener noreferrer" target="_blank" href="http://lattes.cnpq.br/8408152690266564">Lattes CV</a> | <a rel="noopener noreferrer" target="_blank" href="https://cdviana.github.io/">site/blog</a><br />
+Application of multi-scale photogrammetry in structural data collection<br />
+period: 2017-2021 | program: RMH<br />
+ 
+ </p>
+
 <h3 id="msc">MSc</h3>
 <p><strong>Andréa Simone Venancio Machado</strong><br />
 Geomorphological aspects of the extrusive and intrusive terrains of the Fartura (SP) region<br />
