updates to publications and videos

--- a/pages/aboutme/index.html
+++ b/pages/aboutme/index.html
@@ -281,7 +281,7 @@ My ORCiD is <a rel="noopener noreferrer" target="_blank" href="http://orcid.org/
     <p>Editor-in-Chief of the <a rel="noopener noreferrer" target="_blank" href="http://www.scielo.br/bjgeo">Brazilian Journal of Geology</a> (2021-??)</p>
   </li>
   <li>
-    <p>Associate Editor of <a rel="noopener noreferrer" target="_blank" href="https://www.journals.elsevier.com/computers-and-geosciences/editorial-board">Computers &amp; Geosciences</a> (2019-??)</p>
+    <p>Associate Editor of <a rel="noopener noreferrer" target="_blank" href="https://www.journals.elsevier.com/computers-and-geosciences/editorial-board">Computers &amp; Geosciences</a> (2019-2022)</p>
   </li>
   <li>
     <p>Deputy Editor of the <a rel="noopener noreferrer" target="_blank" href="http://www.scielo.br/bjgeo">Brazilian Journal of Geology</a> (2017-2021)</p>
