--- a/pages/outreach/index.html
+++ b/pages/outreach/index.html
@@ -280,9 +280,11 @@ Check out the <a rel="noopener noreferrer" target="_blank" href="https://spamlab
   <li><a rel="noopener noreferrer" target="_blank" href="https://youtu.be/VKj0NwHxY7E">08 - Preprints e Postprints - Acesso Aberto Verde </a></li>
   <li><a rel="noopener noreferrer" target="_blank" href="https://youtu.be/DS0HydVh8Bg">09 - Reriódicos Predatórios </a></li>
   <li><a rel="noopener noreferrer" target="_blank" href="https://youtu.be/_IUh0cQRun8">10 - O erro que todos cometemos nas figuras e gráficos </a></li>
-  <li><a rel="noopener noreferrer" target="_blank" href="https://youtu.be/Cn2lUWj9y3A">11 - MDPI: predatória ou não?</a><br />
- </li>
+  <li><a rel="noopener noreferrer" target="_blank" href="https://youtu.be/Cn2lUWj9y3A">11 - MDPI: predatória ou não?</a></li>
+  <li><a rel="noopener noreferrer" target="_blank" href="https://youtu.be/fdsV0MGoAIc">12 - “A” CAPES ou “O” CAPES? “O” CNPq ou “A” CNPq?</a></li>
 </ul>
+
+<p> </p>
 
 <h3 id="demix-project">DEMIX project</h3>
 <ul>
@@ -293,7 +295,8 @@ Check out the <a rel="noopener noreferrer" target="_blank" href="https://spamlab
 
 <h3 id="gis-tips">GIS tips</h3>
 <ul>
-  <li><a rel="noopener noreferrer" target="_blank" href="https://youtu.be/rltgCF7R6wg">ANÁLISE - Qual o melhor MDE gratuito e global? </a></li>
+  <li><a rel="noopener noreferrer" target="_blank" href="https://youtu.be/rltgCF7R6wg">ANÁLISE - Qual o melhor MDE gratuito e global?</a></li>
+  <li><a rel="noopener noreferrer" target="_blank" href="https://youtu.be/5JyIGpLyWGI">Pixel não é o mesmo que Resolução Espacial</a></li>
   <li><a rel="noopener noreferrer" target="_blank" href="https://youtu.be/1QbYTCniepk">FABDEM: um modelo de TERRENO de cobertura global?</a></li>
   <li><a rel="noopener noreferrer" target="_blank" href="https://youtu.be/0-6itRD792w">MDE de 10m com UMA imagem Sentinel?</a></li>
   <li><a rel="noopener noreferrer" target="_blank" href="https://youtu.be/1gsV_wyfWJY">QGIS - Plugin para baixar MDEs</a></li>
