--- a/pages/outreach/index.html
+++ b/pages/outreach/index.html
@@ -341,48 +341,48 @@ Check out the <a rel="noopener noreferrer" target="_blank" href="https://spamlab
  </li>
 </ul>
 
-<h3 id="qgis-classes">QGIS classes</h3>
-<ul>
-  <li><a rel="noopener noreferrer" target="_blank" href="https://youtu.be/V61_LQZpz60">QGIS 01 - Introdução ao SIG e a Software Livre </a></li>
-  <li><a rel="noopener noreferrer" target="_blank" href="https://youtu.be/TNTPO1vTEoE">QGIS 02 - Princípios de Cartografia </a></li>
-  <li><a rel="noopener noreferrer" target="_blank" href="https://youtu.be/J0YBk-oD6jo">QGIS 03 - Dados e Metadados </a></li>
-  <li><a rel="noopener noreferrer" target="_blank" href="https://youtu.be/siL_RJg3pPY">QGIS 03.1 - Exercício - Georreferenciamento </a></li>
-  <li><a rel="noopener noreferrer" target="_blank" href="https://youtu.be/G4gepdqPOWo">QGIS 04 - Dados Vetoriais </a></li>
-  <li><a rel="noopener noreferrer" target="_blank" href="https://youtu.be/gkXE5AQzwrM">QGIS 04.1 - Edição de Dados Vetoriais </a></li>
-  <li><a rel="noopener noreferrer" target="_blank" href="https://youtu.be/lnx5W7ULUwk">QGIS 04.2 - Vetores - Arquivos CSV e GPX, mais dois plugins muito úteis </a></li>
-  <li><a rel="noopener noreferrer" target="_blank" href="https://youtu.be/DHXn_qG8qm4">QGIS 04.3 - Exercício - municípios do Brasil </a></li>
-  <li><a rel="noopener noreferrer" target="_blank" href="https://youtu.be/- lpQGIS I04 -">QGIS 04.4 - Exercício - Seleção por localização, atributos e buffers vetoriais com MMQGIS </a></li>
-  <li><a rel="noopener noreferrer" target="_blank" href="https://youtu.be/JMER9LTJpU4">QGIS 04.5 - Exercício - Densidade de população com união de tabelas </a></li>
-  <li><a rel="noopener noreferrer" target="_blank" href="https://youtu.be/Xyv1XIuZkdQ">QGIS 05 - Dados tipo Raster </a></li>
-  <li><a rel="noopener noreferrer" target="_blank" href="https://youtu.be/tB-VrcrLM8Y">QGIS 06 - Interpolação </a></li>
-  <li><a rel="noopener noreferrer" target="_blank" href="https://youtu.be/ASzSV_ND01A">QGIS 06.1 - Exercício - interpolação </a></li>
-  <li><a rel="noopener noreferrer" target="_blank" href="https://youtu.be/KDlsy7_9CBo">QGIS 07 - Modelos Digitais de Elevação </a></li>
-  <li><a rel="noopener noreferrer" target="_blank" href="https://youtu.be/tBVrcrLM8Y">QGIS 07.1 - Exercício - Análise Digital de Terreno (Geomorfometria) </a></li>
-  <li><a rel="noopener noreferrer" target="_blank" href="https://youtu.be/eq4aLMffP9g">QGIS 08 - Sensoriamento Remoto </a></li>
-  <li><a rel="noopener noreferrer" target="_blank" href="https://youtu.be/Z8345GjEC4k">QGIS 08.1 - Imagens multibandas (layer stack) no QGIS </a></li>
-  <li><a rel="noopener noreferrer" target="_blank" href="https://youtu.be/zg-CbRA3qTA">QGIS 08.2 - Exercício - Sensoriamento Remoto </a></li>
-  <li><a rel="noopener noreferrer" target="_blank" href="https://youtu.be/CmPWnjkdSMo">QGIS 09 - Como fazer mapas no QGIS </a><br />
- </li>
-</ul>
+<h3 id="qgis-and-grass-gis-classes">QGIS and GRASS-GIS classes</h3>
+<p>These videos have their own page: <a href="/pages/sigcomsl">SIG com Software Livre</a></p>
 
-<h3 id="grass-gis-classes">GRASS-GIS classes</h3>
-<ul>
-  <li><a rel="noopener noreferrer" target="_blank" href="https://youtu.be/qvkjqPPFjIM">GRASS 01 - Conhecendo o GRASS-GIS (histórico e conceitos básicos) </a></li>
-  <li><a rel="noopener noreferrer" target="_blank" href="https://youtu.be/R6uqkN9j4bc">GRASS 02 - Location, maspset e visão geral do sistema </a></li>
-  <li><a rel="noopener noreferrer" target="_blank" href="https://youtu.be/4l6BCCXMwLA">GRASS 03 - Dados raster / Trabalhando com a Region </a></li>
-  <li><a rel="noopener noreferrer" target="_blank" href="https://youtu.be/JSMYjjsBEGo">GRASS 04 - Visualização 3D </a></li>
-  <li><a rel="noopener noreferrer" target="_blank" href="https://youtu.be/rgutNeD3nkE">GRASS 05 - Álgebra de mapas raster (r.mapcalc) </a></li>
-  <li><a rel="noopener noreferrer" target="_blank" href="https://youtu.be/Sk02h1P_PPA">GRASS 06 - Dados vetoriais </a></li>
-  <li><a rel="noopener noreferrer" target="_blank" href="https://youtu.be/ECRFyrSEmtI">GRASS 07 - Máscaras </a></li>
-  <li><a rel="noopener noreferrer" target="_blank" href="https://youtu.be/gUIagGIEEhA">GRASS 08 - Instalando Extensões (add-ons) </a></li>
-  <li><a rel="noopener noreferrer" target="_blank" href="https://youtu.be/RWKlvYh5EJc">GRASS 09 - Sensoriamento Remoto 01 </a></li>
-  <li><a rel="noopener noreferrer" target="_blank" href="https://youtu.be/_B_fwlkR85w">GRASS 10 - Sensoriamento Remoto 02 </a></li>
-  <li><a rel="noopener noreferrer" target="_blank" href="https://youtu.be/21ksUZSgbY8">GRASS 11 - Análise Digital de Terreno </a></li>
-  <li><a rel="noopener noreferrer" target="_blank" href="https://youtu.be/-uRrN-ZH-wQ">GRASS 12 - Preview da versão 8.0 </a></li>
-  <li><a rel="noopener noreferrer" target="_blank" href="https://youtu.be/wBCgtVSVXAc">GRASS 13 - Compilação no Linux </a>
- </li>
-</ul>
+<!-- ### QGIS classes
+- [QGIS 01 - Introdução ao SIG e a Software Livre ](https://youtu.be/V61_LQZpz60)  
+- [QGIS 02 - Princípios de Cartografia ](https://youtu.be/TNTPO1vTEoE)  
+- [QGIS 03 - Dados e Metadados ](https://youtu.be/J0YBk-oD6jo)  
+- [QGIS 03.1 - Exercício - Georreferenciamento ](https://youtu.be/siL_RJg3pPY)  
+- [QGIS 04 - Dados Vetoriais ](https://youtu.be/G4gepdqPOWo)  
+- [QGIS 04.1 - Edição de Dados Vetoriais ](https://youtu.be/gkXE5AQzwrM)  
+- [QGIS 04.2 - Vetores - Arquivos CSV e GPX, mais dois plugins muito úteis ](https://youtu.be/lnx5W7ULUwk)  
+- [QGIS 04.3 - Exercício - municípios do Brasil ](https://youtu.be/DHXn_qG8qm4)  
+- [QGIS 04.4 - Exercício - Seleção por localização, atributos e buffers vetoriais com MMQGIS ](https://youtu.be/- lpQGIS I04 - )  
+- [QGIS 04.5 - Exercício - Densidade de população com união de tabelas ](https://youtu.be/JMER9LTJpU4)  
+- [QGIS 05 - Dados tipo Raster ](https://youtu.be/Xyv1XIuZkdQ)  
+- [QGIS 06 - Interpolação ](https://youtu.be/tB-VrcrLM8Y)  
+- [QGIS 06.1 - Exercício - interpolação ](https://youtu.be/ASzSV_ND01A)  
+- [QGIS 07 - Modelos Digitais de Elevação ](https://youtu.be/KDlsy7_9CBo)  
+- [QGIS 07.1 - Exercício - Análise Digital de Terreno (Geomorfometria) ](https://youtu.be/tBVrcrLM8Y)  
+- [QGIS 08 - Sensoriamento Remoto ](https://youtu.be/eq4aLMffP9g)  
+- [QGIS 08.1 - Imagens multibandas (layer stack) no QGIS ](https://youtu.be/Z8345GjEC4k)  
+- [QGIS 08.2 - Exercício - Sensoriamento Remoto ](https://youtu.be/zg-CbRA3qTA)  
+- [QGIS 09 - Como fazer mapas no QGIS ](https://youtu.be/CmPWnjkdSMo)  
+&nbsp;
 
+### GRASS-GIS classes
+- [GRASS 01 - Conhecendo o GRASS-GIS (histórico e conceitos básicos) ](https://youtu.be/qvkjqPPFjIM)  
+- [GRASS 02 - Location, maspset e visão geral do sistema ](https://youtu.be/R6uqkN9j4bc)  
+- [GRASS 03 - Dados raster / Trabalhando com a Region ](https://youtu.be/4l6BCCXMwLA)  
+- [GRASS 04 - Visualização 3D ](https://youtu.be/JSMYjjsBEGo)  
+- [GRASS 05 - Álgebra de mapas raster (r.mapcalc) ](https://youtu.be/rgutNeD3nkE)  
+- [GRASS 06 - Dados vetoriais ](https://youtu.be/Sk02h1P_PPA)  
+- [GRASS 07 - Máscaras ](https://youtu.be/ECRFyrSEmtI)  
+- [GRASS 08 - Instalando Extensões (add-ons) ](https://youtu.be/gUIagGIEEhA)  
+- [GRASS 09 - Sensoriamento Remoto 01 ](https://youtu.be/RWKlvYh5EJc)  
+- [GRASS 10 - Sensoriamento Remoto 02 ](https://youtu.be/_B_fwlkR85w)  
+- [GRASS 11 - Análise Digital de Terreno ](https://youtu.be/21ksUZSgbY8)  
+- [GRASS 12 - Preview da versão 8.0 ](https://youtu.be/-uRrN-ZH-wQ)
+- [GRASS 13 - Compilação no Linux ](https://youtu.be/wBCgtVSVXAc)
+&nbsp;
+
+ -->
 <!-- - [](https://youtu.be/) -->
 
 <!-- Pesquisadores realizam mapeamento 3D da Caverna do Diabo (by [Agência FAPESP](http://agencia.fapesp.br/pesquisadores-realizam-mapeamento-3d-da-caverna-do-diabo/30966/))  
