--- a/pages/sigcomsl/index.html
+++ b/pages/sigcomsl/index.html
@@ -354,8 +354,15 @@ Vídeo - <a rel="noopener noreferrer" target="_blank" href="https://youtu.be/CmP
   <li>Vídeo - <a rel="noopener noreferrer" target="_blank" href="https://youtu.be/ECRFyrSEmtI">07 - Máscaras</a></li>
   <li>Vídeo - <a rel="noopener noreferrer" target="_blank" href="https://youtu.be/gUIagGIEEhA">08 - Instalando Extensões (add-ons)</a></li>
   <li>Vídeo - <a rel="noopener noreferrer" target="_blank" href="https://www.youtube.com/playlist?list=PL9GztlLGb7RovKMMO2ohYdfxfILXjxwEy">09 - Sensoriamento Remoto 1 - pré-processamento e correção atmosférica</a></li>
-  <li>Vídeo - <a rel="noopener noreferrer" target="_blank" href="https://www.youtube.com/playlist?list=PL9GztlLGb7RovKMMO2ohYdfxfILXjxwEy">10 - Sensoriamento Remoto 2 - detecção de mudanças e classificação</a><br />
-<br /></li>
+  <li>Vídeo - <a rel="noopener noreferrer" target="_blank" href="https://www.youtube.com/playlist?list=PL9GztlLGb7RovKMMO2ohYdfxfILXjxwEy">10 - Sensoriamento Remoto 2 - detecção de mudanças e classificação</a></li>
+  <li>Vídeo - <a rel="noopener noreferrer" target="_blank" href="https://youtu.be/21ksUZSgbY8">11 - Análise Digital de Terreno </a></li>
+  <li>Vídeo - <a rel="noopener noreferrer" target="_blank" href="https://youtu.be/-uRrN-ZH-wQ">12 - Preview da versão 8.0 </a></li>
+  <li>Vídeo - <a rel="noopener noreferrer" target="_blank" href="https://youtu.be/wBCgtVSVXAc">13 - Compilação no Linux </a></li>
+</ul>
+
+<p><br />
+<br /></p>
+<ul>
   <li>Live - <a rel="noopener noreferrer" target="_blank" href="https://youtu.be/_pohWjE4eiA">O fascinante mundo do GRASS-GIS (Geocast BR)</a></li>
   <li>Live - <a rel="noopener noreferrer" target="_blank" href="https://youtu.be/vp6frd89y9E">O Fascinante Mundo do GRASS (Prof. Gustavo Baptista - Ao Vivo no YouTube #6)</a></li>
   <li>Podcast - <a rel="noopener noreferrer" target="_blank" href="https://anchor.fm/profgustavobaptista/episodes/Episdio-89---O-Fascinante-Mundo-do-GRASS-e17e6da">O Fascinante Mundo do Sensoriamento Remoto (Prof. Gustavo Baptista)</a></li>
