--- a/404.html
+++ b/404.html
@@ -65,31 +65,31 @@
                 <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">About Me<span class="caret"></span></a>
                   <ul class="dropdown-menu">
-                    <li><a href="/pages/aboutme">CV/Bio</a></li>
-                    <li><a href="/pages/gmaps">Map</a></li>
+                    <li><a href="/pages/aboutme.html">CV/Bio</a></li>
+                    <li><a href="/pages/gmaps.html">Map</a></li>
                   </ul>
                 </li>
 
                 <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Research<span class="caret"></span></a>
                   <ul class="dropdown-menu">
-                    <li><a href="/pages/publications_bib">Publications</a></li>
-                    <li><a href="/pages/grants">Projects</a></li>
-                    <li><a href="/pages/students">Students</a></li>
+                    <li><a href="/pages/publications_bib.html">Publications</a></li>
+                    <li><a href="/pages/grants.html">Projects</a></li>
+                    <li><a href="/pages/students.html">Students</a></li>
                     <li><a href="https://spamlab.github.io/" target="_blank">SPAMLab</i></a></li>
-                    <li><a href="/pages/openstereo_chg">OpenStereo</a></li>
+                    <li><a href="/pages/openstereo_chg.html">OpenStereo</a></li>
                   </ul>
                 </li>
 
                 <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Outreach<span class="caret"></span></a>
                   <ul class="dropdown-menu">
-                    <li><a href="/pages/videos">Videos</a></li>
-                    <li><a href="/pages/sigcomsl">GIS+FOSS</a></li>
+                    <li><a href="/pages/videos.html">Videos</a></li>
+                    <li><a href="/pages/sigcomsl.html">GIS+FOSS</a></li>
                   </ul>
                 </li>
 
-                <li><a href="/pages/bjgeo">BJGEO</a></li>
+                <li><a href="/pages/bjgeo.html">BJGEO</a></li>
                 <li><a href="/blog/bjgeo_rev_papers/">Blog</a></li>
             </ul>
 
