--- a/isg_test/index.html
+++ b/isg_test/index.html
@@ -372,7 +372,7 @@
 <div class="portfolio-grid">
     
     <div class="portfolio-cell">
-        <a class="portfolio-link" data-keyboard="true" href="/isg_test/portfolio/coffee-talks-pfolio">
+        <a class="portfolio-link" data-keyboard="true" href="/isg_test/portfolio/coffee-talks-pfolio.html">
             <div class="caption" title="Geomorphometry Coffee Talks">
                 <div class="caption-content">
                     <i class="fas fa-search-plus fa-3x"></i>
@@ -383,7 +383,7 @@
     </div>
     
     <div class="portfolio-cell">
-        <a class="portfolio-link" data-keyboard="true" href="/isg_test/portfolio/gmorph-2025-pfolio">
+        <a class="portfolio-link" data-keyboard="true" href="/isg_test/portfolio/gmorph-2025-pfolio.html">
             <div class="caption" title="Geomorphometry 2025 - Announcement">
                 <div class="caption-content">
                     <i class="fas fa-search-plus fa-3x"></i>
