--- a/isg_test2/isg-council/index.html
+++ b/isg_test2/isg-council/index.html
@@ -210,7 +210,7 @@
   <li>Secretary: <strong>Carlos H. Grohmann</strong>, Universidade de São Paulo, Brazil</li>
   <li>Councilor: <strong>Samantha T Arundel</strong>, U.S. Geological Survey, USA</li>
   <li>Councilor: <strong>Cheng-Zhi Qin</strong>, Chinese Academy of Sciences, Beijing, China</li>
-  <li>Councilor: <strong>Massiniliano Giorgio</strong>, Faculty of Geography and Geology, Alexandru Ioan Cuza University of Iasi, Romania</li>
+  <li>Councilor: <strong>Massimiliano Alvioli</strong>, CNR IRPI Perugia</li>
 </ul>
 
 <h4 id="isg-council-2021-2023">ISG Council (2021-2023):</h4>
