--- a/isg_test2/gallery-2021/index.html
+++ b/isg_test2/gallery-2021/index.html
@@ -1301,6 +1301,14 @@ html { overflow-y: scroll; }
   
 
   
+    
+        <a href="/isg_test2/uploads/img/meet2021/zoom1.png">
+        <img src="/isg_test2/uploads/img/meet2021/zoom1.png" alt="" class="grid-item" style="padding: 0;">
+        </a>
+    
+  
+
+  
 
   
 
