--- a/isg_test2/membership/index.html
+++ b/isg_test2/membership/index.html
@@ -285,8 +285,8 @@
 <div class="field">
     <label class="label">Student?</label>
     <div class="control">
-        <label class="radio"><input name="availability" type="radio" value="yes"> Yes</label>
-        <label class="radio"><input name="availability" type="radio" value="no" checked> No</label>
+        <label class="radio"><input name="student" type="radio" value="yes"> Yes</label>
+        <label class="radio"><input name="student" type="radio" value="no" checked> No</label>
     </div>
 </div>
 
