--- a/isg_test2/contact/index.html
+++ b/isg_test2/contact/index.html
@@ -265,11 +265,11 @@
     <div class="field is-narrow">
       <div class="control">
         <label class="radio">
-          <input type="radio" name="member">
+          <input type="radio" name="member" value="yes">
           Yes
         </label>
         <label class="radio">
-          <input type="radio" name="member">
+          <input type="radio" name="member" value="no">
           No
         </label>
       </div>
@@ -321,7 +321,7 @@
   <div class="field-body">
   <div id="file-js-example" class="file has-name is-fullwidth">
     <label class="file-label">
-      <input class="file-input" type="file" name="resume">
+      <input class="file-input" type="file" name="comments">
       <span class="file-cta">
         <span class="file-icon">
           <i class="fas fa-upload"></i>
