--- a/isg_test2/membership/index.html
+++ b/isg_test2/membership/index.html
@@ -216,7 +216,7 @@
 
 <form target="_blank" action="https://formsubmit.co/geomorphometry.org@gmail.com" method="POST">
 <!-- <input type="hidden" name="_next" value="https://yourdomain.co/thanks.html"> -->
-<input type="hidden" name="_subject" value="[Geomorphometry.org Membership] New form submitted!">
+<input type="hidden" name="_subject" value="[Geomorphometry.org] MEMBERSHIP - new form submitted!">
 <input type="hidden" name="_template" value="table">
 <!-- <input type="hidden" name="_cc" value="another@email.com"> -->
 
