fixes to map and about

--- a/gmaps/index.html
+++ b/gmaps/index.html
@@ -195,7 +195,7 @@ For a more immersive experience, there's a full-screen version <a href="/pages/g
 
 </div>
 <!-- places.geojson -->
-<link rel="points" type="application/json" href="/pages/places.geojson">
+<link rel="points" type="application/json" href="/assets/js/places.geojson">
 
 <!-- <script src='places.geojson' type="text/javascript"></script> http://{s}.tiles.mapbox.com/v4/mapbox.natural-earth-2/{z}/{x}/{y}.png-->
 
