--- a/pages/gmaps_full.html
+++ b/pages/gmaps_full.html
@@ -1,4 +1,3 @@
-
 <!-- JQuery -->
 <script src="/assets/js/jquery-3.4.1.min.js"></script>
 
@@ -32,7 +31,7 @@ html, body, #map {
 <!-- LeafLet map  - relative link -->
 <div id="map"></div>
 <!-- places.geojson -->
-<link rel="points" type="application/json" href='/pages/places.geojson'>
+<link rel="points" type="application/json" href='/assets/js/places.geojson'>
 <!-- <script src='places.geojson' type="text/javascript"></script> -->
 
 <script>
